# EasyMetrics

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo.py  examples.py  pyproject.toml
docs/: 使用指南.md  指标详解.md
easyMetrics/: __init__.py
easyMetrics/core/: __init__.py  base.py
easyMetrics/tasks/: __init__.py
easyMetrics/tasks/classification/: __init__.py  accuracy.py  auc.py  f1_score.py
easyMetrics/tasks/detection/: __init__.py  format_converter.py  interface.py  map.py  matcher.py  utils.py
tests/: __init__.py  conftest.py  test_classification.py  test_detection.py  test_evaluate.py
