[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EasyMetrics"
version = "0.4.4"
description = "轻量级、零依赖的机器学习指标评估平台"
readme = "README.md"
authors = [
    { name = "EasyMetrics Team", email = "team@easymetrics.example" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.7"
dependencies = [
    "numpy"
]
optional-dependencies = {
    "progress" = ["tqdm"],
    "dev" = ["pytest", "pytest-cov"]
}

[project.urls]
homepage = "https://github.com/Lucidyn/EasyMetrics"
documentation = "https://github.com/Lucidyn/EasyMetrics#readme"
repository = "https://github.com/Lucidyn/EasyMetrics"
issues = "https://github.com/Lucidyn/EasyMetrics/issues"

[tool.setuptools.packages.find]
include = ["easyMetrics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
